# Projekt_Niosr

./: Dockerfile  README.md  enter.sh  run.sh
.devcontainer/: Dockerfile  build.sh  entrypoint.sh  run.sh
niosr/: startgazebo.sh
niosr/src/robot_control/: CMakeLists.txt  README.md  package.xml
niosr/src/robot_control/config/: robot_control.param.yaml
niosr/src/robot_control/launch/: robot_control.launch.py
niosr/src/robot_control/robot_control/: camera_aruco_node.py  robot_control.py  robot_control_node.py
niosr/src/robot_control/test/: test_robot_control.py
